--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,12 @@ body {
     background-color: lightgrey;
     text-align: center;
 }
-img {
+/*img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 45%;
-  }
+}*/
 .wrapper {
     margin: 0 auto;
     width: 45%;   
