--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,9 @@ body {
     background-color: lightgrey;
     text-align: center;
 }
-/*img {
+img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 45%;
-}*/
-.wrapper {
-    margin: 0 auto;
-    width: 55%;   
 }
